css/admin-theme.css
/* ... */
.glb-button:hover,
.inline-block-create-button:hover,
.layout-builder__link--add:hover,
.glb-button:not(:focus):hover,
.inline-block-create-button:not(:focus):hover,
.layout-builder__link--add:not(:focus):hover,
.form-actions .glb-button:hover,
.form-actions .inline-block-create-button:hover,
.form-actions .layout-builder__link--add:hover,
.glb-action-link--icon-trash.glb-action-link:hover {
  border-color: var(--dark-theme-gray-hover) !important;
}

.glb-button:active, 
.inline-block-create-button:active, 
.layout-builder__link--add:active, 
.glb-button:focus, 
.inline-block-create-button:focus, 
.layout-builder__link--add:focus, 
.glb-button:not(:focus):active, 
.inline-block-create-button:not(:focus):active, 
.layout-builder__link--add:not(:focus):active, 
.glb-button:not(:focus):focus, 
.inline-block-create-button:not(:focus):focus, 
.layout-builder__link--add:not(:focus):focus, 
.form-actions .glb-button:active, 
.form-actions .inline-block-create-button:active, 
.form-actions .layout-builder__link--add:active, 
.form-actions .glb-button:focus, 
.form-actions .inline-block-create-button:focus, 
.form-actions .layout-builder__link--add:focus, 
.glb-action-link--icon-trash.glb-action-link:active, 
.glb-action-link--icon-trash.glb-action-link:focus {
  background-color: var(--robin-egg) !important;
}

.layout-builder__section:hover .layout-builder__link--add-section-to-library,
.layout-builder__section:hover .layout-builder__link--remove {
  background-color: var(--dark-theme-gray-hover) !important;
}

.layout-builder__section:hover .layout-builder__link--configure {
  color: var(--wool) !important;
  background-color: var(--dark-theme-gray) !important;
}

.paragraphs-dropdown-toggle {
  background-color: var(--wool);
}

.link:hover {
  text-decoration: underline;
}

.link.tabledrag-toggle-weight {
  color: var(--gin-color-primary);
  background-color: var(--darkest-gray);
}


.gin--dark-mode .glb-table .tabledrag-handle::after {
  background-color: var(--darkest-gray) !important;
}

/* Media library */ 
.media-library-item__click-to-select-checkbox .glb-form-checkbox:checked {
  background-color: var(--darkest-gray) !important;
}

.gin--dark-mode[dir="ltr"] .media-library-item img {
  background-image: unset !important;
}

/* checkbox spacing */ 
.gin--dark-mode .js-form-type-checkbox.form-type--checkbox {
  padding: 0.5rem;
}

/* Sections on nodes */
.layout-builder .layout-builder__add-section {
  position: relative;
  background-color: hsl(180, 7%, 90%);
  padding: 1rem 2rem;
  margin: 2rem 1rem;
  max-width: calc(100% - 2rem);
}

.layout-builder__link--configure {
  color: var(--dark-theme-gray);
}

.layout-builder__link--add-section-to-library,
.layout-builder__link--remove {
  background-color: var(--dark-theme-gray-hover);
}

.layout-builder__section:not(.gin-lb--disable-section-focus)::after {
  border: 0.35rem solid  hsl(180, 7%, 75%) !important;
  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.layout-builder__section:not(.gin-lb--disable-section-focus):hover::after {
  border: 0.35rem solid  hsl(180, 7%, 20%) !important;
}

.layout-builder__section {
  margin: 2rem 1rem;
}

.layout-builder__section .js-layout-builder-region {
  padding: 1rem;
}

/* Make the secondary toolbar fixes */
.gin-secondary-toolbar--frontend {
  position: fixed;
  background-color: var(--gin-bg-layer);
  width: 100%;
  top: calc(var(--gin-toolbar-secondary-height) - 7px) !important;
}

/* Layout builder modal */
.ws-lb-link__label {
  color: var(--dark-theme-gray) !important;
}

.gin--dark-mode .form-element,
.gin--dark-mode .glb-form-element {
  background-color: var(--gin-bg-layer2) !important;
}

/* remove media button */
.gin--dark-mode .media-library-add-form__remove-button {
  background-color: var(--robin-egg);
  color: var(--darkest-gray);
}

.gin--dark-mode .ui-dialog-titlebar {
  background: var(--darkest-gray);
}

.gin--dark-mode .field-multiple-table h4 {
  color: var(--wool);
}

/* Embed component */
.gin--dark-mode .ui-dialog .ui-widget-content.ui-dialog-content h2 {
  color: var(--wool);
}

.gin--dark-mode .ui-dialog .ui-widget-content.ui-dialog-content .js-form-wrapper.form-wrapper {
  padding: 1rem;
}

.gin--dark-mode .ui-dialog .ui-widget-content.ui-dialog-content .js-form-wrapper.form-wrapper[open] {
  word-break: break-all;
  background-color: var(--darkest-gray);
}

/* yalb-1261 - fix hover color on table */
.layout-builder-components-table__block-label {
  color: var(--dark-theme-gray-hover);
  background-color: var(--wool);
}
.layout-builder-components-table__block-label:hover {
  color: var(--dark-theme-gray-hover);
  text-decoration: underline;
}

.layout-builder-components-table th {
  color: var(--wool);
  background-color: var(--darkest-gray);
}

.layout-builder-components-table th:hover {
  color: var(--wool);
  background-color: var(--darkest-gray);
}
.layout-builder-components-table tr:nth-child(2n) {
  background-color: var(--dark-theme-gray);
}
.layout-builder-components-table tr:hover {
  color: var(--dark-theme-gray);
  background-color: var(--wool);
}

.layout-builder-components-table__block-label--current,
.layout-builder-components-table__block-label--current:hover {
  color: var(--wool);
  background-color: var(--dark-theme-gray-hover);
}

/* yalb-1251 - AX: pencil icon difficulty editing blocks */
/* change the contextual pencil icon to the left-hand side of each component
// instead of the right
*/
.layout-builder-block.contextual-region .contextual {
  display: flex;
  flex-direction: column;
  top: 1rem;
  left: 2vw;
  right: auto;
  width: auto;
}

@media only screen and (min-width: 2200px) {
  .layout-builder-block.contextual-region .contextual {
    left: 15vw;
  }
}

@media only screen and (min-width: 2500px) {
  .layout-builder-block.contextual-region .contextual {
    left: 20vw;
  }
}

.layout-builder-block.contextual-region .contextual .contextual-links {
  left: 0;
  right: 0;
  float: unset;
}
/* ... */

